[package]
name = "callpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
dptree = "0.5"
rand = "0.9.2"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "rustls-tls-native-roots"] }
serde = "1.0"
serde_json = "1.0"
sysinfo = "0.38.0"
teloxide = { git = "https://github.com/teloxide/teloxide.git", default-features = false, features = ["rustls", "macros"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["chrono"] }

